--- a/src/modules/_bootstrap/_variables.scss
+++ b/src/modules/_bootstrap/_variables.scss
@@ -1,5 +1,24 @@
 
+$white:    #fff !default;
+$gray-100: #f8f9fa !default;
+$gray-200: #e9ecef !default;
+$gray-300: #dee2e6 !default;
+$gray-400: #ced4da !default;
+$gray-500: #adb5bd !default;
+$gray-600: #868e96 !default;
+$gray-700: #495057 !default;
+$gray-800: #343a40 !default;
+$gray-900: #212529 !default;
+$black:    #000 !default;
+
 $primary: #e54646;
+$light:   $gray-100 !default;
+
+$theme-colors: (
+	"gray-light": $gray-400,
+	"gray":       $gray-600,
+	"gray-dark":  $gray-700
+);
 
 $grid-breakpoints: (
 	xs: 0,
